--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "webpack-dev-server": "^3.1.9"
   },
   "dependencies": {
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "ts-loader": "^6.0.4",
+    "typescript": "^3.5.2"
   }
 }
