--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "deploy": "gh-pages -d build",
     "pretty": "prettier **/*.{ts,scss,css,html,json} --write"
   },
+  "dependencies": {
+    "jquery": "^3.3.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
@@ -24,6 +27,7 @@
     "copy-webpack-plugin": "^4.5.3",
     "css-loader": "^1.0.0",
     "gh-pages": "^2.0.1",
+    "husky": "^3.0.0",
     "node-sass": "^4.9.3",
     "prettier": "1.18.2",
     "sass-loader": "^7.1.0",
@@ -31,11 +35,13 @@
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.9"
-  },
-  "dependencies": {
-    "jquery": "^3.3.1",
+    "webpack-dev-server": "^3.1.9",
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn pretty"
+    }
   }
 }
