--- a/package.json
+++ b/package.json
@@ -18,11 +18,7 @@
     "jquery": "^3.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/preset-env": "^7.1.0",
     "@types/jquery": "^3.3.30",
-    "babel-loader": "^8.0.4",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.3",
     "css-loader": "^1.0.0",
@@ -32,12 +28,12 @@
     "prettier": "1.18.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "ts-loader": "^6.0.4",
+    "typescript": "^3.5.2",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.9",
-    "ts-loader": "^6.0.4",
-    "typescript": "^3.5.2"
+    "webpack-dev-server": "^3.1.9"
   },
   "husky": {
     "hooks": {
