--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "pretty": "prettier --write '**/*.{ts,scss,css,html,json}'"
   },
   "dependencies": {
+    "angles": "^0.2.4",
     "jquery": "^3.3.1"
   },
   "devDependencies": {
     "@types/jquery": "^3.3.30",
+    "@types/node": "^12.6.2",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.3",
     "css-loader": "^1.0.0",
