--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "module": "commonjs",
     "allowSyntheticDefaultImports": true,
     "noImplicitAny": false,
     "module": "es6",
