updated dev dependenices

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,8 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "esnext",
     "allowSyntheticDefaultImports": true,
     "noImplicitAny": false,
-    "module": "es6",
     "target": "es5",
     "jsx": "react",
     "allowJs": true,
