--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,3 @@
 {
-  "cSpell.words": [
-    "medkit",
-    "nukem",
-    "skybox",
-    "uglifyjs"
-  ]
+  "cSpell.words": ["medkit", "nukem", "skybox", "uglifyjs"]
 }
