[FIX] modules typescript

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "cSpell.words": ["medkit", "nukem", "skybox", "uglifyjs"]
+  "cSpell.words": ["medkit", "nukem", "skybox", "uglifyjs"],
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
