--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "pretty": "prettier --write '**/*.{ts,scss,css,html,json}'"
   },
   "dependencies": {
+    "@types/react": "^16.9.17",
+    "@types/react-dom": "^16.9.4",
     "angles": "^0.2.4",
-    "jquery": "^3.4.1"
+    "jquery": "^3.4.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   },
   "devDependencies": {
     "@types/jquery": "^3.3.31",
