--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/react-dom": "^16.9.4",
     "angles": "^0.2.4",
     "jquery": "^3.4.1",
+    "mobx": "^5.15.1",
+    "mobx-react": "^6.1.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
