--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,5 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
-  "exclude": ["node_modules", "build"]
+  "exclude": ["node_modules", "build", "public"]
 }
