--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "angles": "^0.2.4",
+    "classnames": "^2.2.6",
     "jquery": "^3.4.1",
     "mobx": "^5.15.1",
     "mobx-react": "^6.1.4",
@@ -25,6 +26,7 @@
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.9",
     "@types/jquery": "^3.3.31",
     "@types/node": "^13.1.1",
     "clean-webpack-plugin": "^3.0.0",
