--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "sass-loader": "^8.0.0",
     "style-loader": "^1.1.2",
     "ts-loader": "^6.2.1",
+    "tsconfig-paths-webpack-plugin": "^3.3.0",
     "typescript": "^3.7.4",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.41.5",
