--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "jquery": "^3.5.0",
+    "lodash": "^4.17.20",
     "mobx": "^5.15.1",
     "mobx-react": "^6.1.4",
     "react": "^16.12.0",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@types/classnames": "^2.2.9",
     "@types/jquery": "^3.3.31",
+    "@types/lodash": "^4.14.166",
     "@types/node": "^13.1.1",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
