--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.0",
+    "file-loader": "^6.2.0",
     "gh-pages": "^2.1.1",
     "husky": "^3.1.0",
     "node-sass": "^4.13.0",
