--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "emitDecoratorMetadata": true,
     "baseUrl": "src"
   },
-  "typeRoots": ["./src/types.d.ts", "./node_modules/@types"],
+  "typeRoots": ["./src/types.d.ts", "./node_modules/types/"],
   "include": ["src"],
   "exclude": ["node_modules", "build", "public", "webpack.config.js"]
 }
