--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
+    "image-brightness": "^0.0.10",
+    "image-filter-brightness": "^1.0.0",
+    "image-filter-core": "^2.0.2",
     "jquery": "^3.5.0",
     "lodash": "^4.17.20",
     "mobx": "^5.15.1",
